--- a/test_result/ExtentReport.html
+++ b/test_result/ExtentReport.html
@@ -8,7 +8,7 @@ Copyright (c) 2015, Anshoo Arora (Relevant Codes) | Copyrights licensed under th
 Documentation: http://extentreports.relevantcodes.com 
 -->
 
-<extent id='40bd717a-b473-4bd3-9206-3570e7eee1f1' />
+<extent id='479fb177-f0a7-40c5-adae-c15d943528a9' />
 
 <meta charset='UTF-8' /> 
 <meta name='description' content='ExtentReports (by Anshoo Arora) is a reporting library for automation testing for .NET and Java. It creates detailed and beautiful HTML reports for modern browsers. ExtentReports shows test and step summary along with dashboards, system and environment details for quick analysis of your tests.' />
@@ -53,7 +53,7 @@ ExtentReports 2.0
 <i class='mdi-hardware-desktop-windows'></i>
 </li>
 <li>
-<span class='suite-started-time'>2016-02-03 14:08:35</span>
+<span class='suite-started-time'>2016-02-03 14:38:10</span>
 </li>
 <li>
 <span>v2.40.1</span>
@@ -83,25 +83,25 @@ ExtentReports 2.0
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-current'> 
 <span class='panel-name'>Total Time Taken (Current Run)</span> 
-<span class='suite-total-time-current-value panel-lead'>0h 1m 20s+866ms</span> 
+<span class='suite-total-time-current-value panel-lead'>0h 0m 56s+303ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-overall'> 
 <span class='panel-name'>Total Time Taken (Overall)</span> 
-<span class='suite-total-time-overall-value panel-lead'>0h 1m 20s+866ms</span> 
+<span class='suite-total-time-overall-value panel-lead'>0h 1m 115s+272ms</span> 
 </div> 
 </div>
 <div class='col l2 m6 s6 suite-start-time'>
 <div class='card green-accent'> 
 <span class='panel-name'>Start</span> 
-<span class='panel-lead suite-started-time'>2016-02-03 14:07:14</span> 
+<span class='panel-lead suite-started-time'>2016-02-03 14:36:15</span> 
 </div> 
 </div>
 <div class='col l2 m6 s6 suite-end-time'>
 <div class='card pink-accent'> 
 <span class='panel-name'>End</span> 
-<span class='panel-lead suite-ended-time'>2016-02-03 14:08:35</span> 
+<span class='panel-lead suite-ended-time'>2016-02-03 14:38:10</span> 
 </div> 
 </div>
 </div>
@@ -245,17 +245,17 @@ ExtentReports 2.0
 <div class='card-panel no-padding-h no-padding-v no-margin-v'>
 <div class='wrapper'>
 <ul id='test-collection' class='test-collection'>
-<li class='collection-item test displayed active fail' extentid='5673693d-2be5-421b-a28c-1c6d48ee4bc1'>
+<li class='collection-item test displayed active fail' extentid='e7c9973c-3027-492b-8220-1351b45c1b56'>
 <div class='test-head'>
-<span class='test-name'>test Firefox </span>
+<span class='test-name'>test Chrome </span>
 <span class='test-status label right outline capitalize fail'>fail</span>
 <span class='category-assigned hide '></span>
 </div>
 <div class='test-body'>
 <div class='test-info'>
-<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-03 14:07:14</span>
-<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-03 14:08:35</span>
-<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 20s+422ms</span>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-03 14:37:14</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-03 14:38:10</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 56s+43ms</span>
 </div>
 <div class='test-desc'></div>
 <div class='test-attributes'>
@@ -273,28 +273,80 @@ ExtentReports 2.0
 <tbody>
 <tr>
 <td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-<td class='timestamp'>14:07:24</td>
+<td class='timestamp'>14:37:25</td>
 <td class='step-name'>check KẾT QUẢ CHIẾN DỊCH</td>
-<td class='step-details'>java.lang.AssertionError: expected [KẾT QUẢ CHIẾN DỊCH123] but found [KẾT QUẢ CHIẾN DỊCH]like below<img class='report-img' data-featherlight='./snapshot1454483244603.jpg' src='./snapshot1454483244603.jpg' /></td>
+<td class='step-details'>java.lang.AssertionError: expected [KẾT QUẢ CHIẾN DỊCH123] but found [KẾT QUẢ CHIẾN DỊCH]like below<img class='report-img' data-featherlight='./snapshot/1454485044973.jpg' src='./snapshot/1454485044973.jpg' /></td>
 </tr>
 <tr>
 <td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>14:07:24</td>
+<td class='timestamp'>14:37:25</td>
 <td class='step-details'>Check GIÁ</td>
 </tr>
 <tr>
 <td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
-<td class='timestamp'>14:07:58</td>
+<td class='timestamp'>14:37:58</td>
 <td class='step-name'>Can't find CP-645390271</td>
-<td class='step-details'>Unable to locate element: {"method":"link text","selector":"CP-64539027"}
-Command duration or timeout: 30.29 seconds
+<td class='step-details'>no such element: Unable to locate element: {"method":"link text","selector":"CP-64539027"}
+  (Session info: chrome=48.0.2564.97)
+  (Driver info: chromedriver=2.20.353124 (035346203162d32c80f1dce587c8154a1efa0c3b),platform=Mac OS X 10.11.3 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 30.11 seconds
 For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
 Build info: version: '2.50.0', revision: '1070ace4650453d518aeb03e7a9a36c9d264a8e7', time: '2016-01-27 10:46:18'
 System info: host: 'oros-Mac-mini-3.local', ip: '172.30.4.221', os.name: 'Mac OS X', os.arch: 'x86_64', os.version: '10.11.3', java.version: '1.8.0_71'
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=44.0, platform=MAC, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
-Session ID: 239fd029-a7a1-6d4e-9916-7ef372c7c556
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, chrome={userDataDir=/var/folders/dv/zh6fsbsx5b5_51vxl5fcqsb40000gp/T/.org.chromium.Chromium.dIt0JP}, takesHeapSnapshot=true, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=48.0.2564.97, platform=MAC, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
+Session ID: 520dc21544129da6a04381048871d21b
 *** Element info: {Using=link text, value=CP-64539027}</td>
+</tr>
+</tbody>
+</table>
+<ul class='collapsible node-list' data-collapsible='accordion'>
+</ul>
+</div>
+</div>
+</li>
+<li class='collection-item test displayed active fail' extentid='79a2cbf7-582f-4558-9c74-a0f52500a0b9'>
+<div class='test-head'>
+<span class='test-name'>test Firefox </span>
+<span class='test-status label right outline capitalize fail'>fail</span>
+<span class='category-assigned hide '></span>
+</div>
+<div class='test-body'>
+<div class='test-info'>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-03 14:36:15</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-03 14:37:13</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 58s+0ms</span>
+</div>
+<div class='test-desc'></div>
+<div class='test-attributes'>
+</div>
+<div class='test-steps'>
+<table class='bordered table-results'>
+<thead>
+<tr>
+<th>Status</th>
+<th>Timestamp</th>
+<th>StepName</th>
+<th>Details</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+<td class='timestamp'>14:36:25</td>
+<td class='step-name'>check KẾT QUẢ CHIẾN DỊCH</td>
+<td class='step-details'>java.lang.AssertionError: expected [KẾT QUẢ CHIẾN DỊCH123] but found [KẾT QUẢ CHIẾN DỊCH]like below<img class="report-img" data-featherlight="./snapshot/1454484985155.jpg" src="./snapshot/1454484985155.jpg"></td>
+</tr>
+<tr>
+<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+<td class='timestamp'>14:36:25</td>
+<td class='step-details'>Check GIÁ</td>
+</tr>
+<tr>
+<td class='status error' title='error' alt='error'><i class='mdi-alert-error'></i></td>
+<td class='timestamp'>14:36:59</td>
+<td class='step-name'>Can't find CP-645390271</td>
+<td class='step-details'>Unable to locate element: {"method":"link text","selector":"CP-64539027"} Command duration or timeout: 30.07 seconds For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html Build info: version: '2.50.0', revision: '1070ace4650453d518aeb03e7a9a36c9d264a8e7', time: '2016-01-27 10:46:18' System info: host: 'oros-Mac-mini-3.local', ip: '172.30.4.221', os.name: 'Mac OS X', os.arch: 'x86_64', os.version: '10.11.3', java.version: '1.8.0_71' Driver info: org.openqa.selenium.firefox.FirefoxDriver Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=44.0, platform=MAC, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}] Session ID: 705fee2b-e32e-9440-b69e-80b30373c122 *** Element info: {Using=link text, value=CP-64539027}</td>
 </tr>
 </tbody>
 </table>
