--- a/test_result/TestNG-result.html
+++ b/test_result/TestNG-result.html
@@ -8,7 +8,7 @@ Copyright (c) 2015, Anshoo Arora (Relevant Codes) | Copyrights licensed under th
 Documentation: http://extentreports.relevantcodes.com 
 -->
 
-<extent id='0dc0df1e-709a-43d3-ac41-faff6a81140b' />
+<extent id='c48eb82c-df50-4595-bf76-af45003d976e' />
 
 <meta charset='UTF-8' /> 
 <meta name='description' content='ExtentReports (by Anshoo Arora) is a reporting library for automation testing for .NET and Java. It creates detailed and beautiful HTML reports for modern browsers. ExtentReports shows test and step summary along with dashboards, system and environment details for quick analysis of your tests.' />
@@ -53,7 +53,7 @@ ExtentReports 2.0
 <i class='mdi-hardware-desktop-windows'></i>
 </li>
 <li>
-<span class='suite-started-time'>2016-02-03 14:38:10</span>
+<span class='suite-started-time'>2016-02-04 17:34:04</span>
 </li>
 <li>
 <span>v2.40.1</span>
@@ -83,25 +83,25 @@ ExtentReports 2.0
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-current'> 
 <span class='panel-name'>Total Time Taken (Current Run)</span> 
-<span class='suite-total-time-current-value panel-lead'>0h 0m 0s+49ms</span> 
+<span class='suite-total-time-current-value panel-lead'>0h 0m 0s+80ms</span> 
 </div> 
 </div>
 <div class='col l2 m4 s12'>
 <div class='card suite-total-time-overall'> 
 <span class='panel-name'>Total Time Taken (Overall)</span> 
-<span class='suite-total-time-overall-value panel-lead'>0h 0m 0s+49ms</span> 
+<span class='suite-total-time-overall-value panel-lead'>0h 0m 0s+80ms</span> 
 </div> 
 </div>
 <div class='col l2 m6 s6 suite-start-time'>
 <div class='card green-accent'> 
 <span class='panel-name'>Start</span> 
-<span class='panel-lead suite-started-time'>2016-02-03 14:36:19</span> 
+<span class='panel-lead suite-started-time'>2016-02-04 17:34:04</span> 
 </div> 
 </div>
 <div class='col l2 m6 s6 suite-end-time'>
 <div class='card pink-accent'> 
 <span class='panel-name'>End</span> 
-<span class='panel-lead suite-ended-time'>2016-02-03 14:38:10</span> 
+<span class='panel-lead suite-ended-time'>2016-02-04 17:34:04</span> 
 </div> 
 </div>
 </div>
@@ -220,6 +220,7 @@ ExtentReports 2.0
 <li class='pass'><a href='#!'>Pass</a></li>
 <li class='fail'><a href='#!'>Fail</a></li>
 <li class='skip'><a href='#!'>Skip</a></li>
+<li class='unknown'><a href='#!'>Unknown</a></li>
 <li class='divider'></li>
 <li class='clear'><a href='#!'>Clear Filters</a></li>
 </ul>
@@ -245,17 +246,17 @@ ExtentReports 2.0
 <div class='card-panel no-padding-h no-padding-v no-margin-v'>
 <div class='wrapper'>
 <ul id='test-collection' class='test-collection'>
-<li class='collection-item test displayed active pass' extentid='2618dbf3-a715-4872-8aae-91cd748c644d'>
+<li class='collection-item test displayed active unknown' extentid='6c650137-3b6e-4eb1-bb85-8e055f92068a'>
 <div class='test-head'>
 <span class='test-name'>testAuto </span>
-<span class='test-status label right outline capitalize pass'>pass</span>
+<span class='test-status label right outline capitalize unknown'>unknown</span>
 <span class='category-assigned hide '></span>
 </div>
 <div class='test-body'>
 <div class='test-info'>
-<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-03 14:36:19</span>
-<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-03 14:37:13</span>
-<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 54s+109ms</span>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
 </div>
 <div class='test-desc'></div>
 <div class='test-attributes'>
@@ -270,11 +271,6 @@ ExtentReports 2.0
 </tr>
 </thead>
 <tbody>
-<tr>
-<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>14:38:10</td>
-<td class='step-details'>Test passed</td>
-</tr>
 </tbody>
 </table>
 <ul class='collapsible node-list' data-collapsible='accordion'>
@@ -282,17 +278,17 @@ ExtentReports 2.0
 </div>
 </div>
 </li>
-<li class='collection-item test displayed active pass' extentid='4bba61c1-ded4-4d50-af29-92c04d63c3a8'>
+<li class='collection-item test displayed active unknown' extentid='1ef1e8fc-863c-4ae5-8b4a-eafba1255988'>
 <div class='test-head'>
 <span class='test-name'>testAuto </span>
-<span class='test-status label right outline capitalize pass'>pass</span>
+<span class='test-status label right outline capitalize unknown'>unknown</span>
 <span class='category-assigned hide '></span>
 </div>
 <div class='test-body'>
 <div class='test-info'>
-<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-03 14:37:17</span>
-<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-03 14:38:10</span>
-<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 52s+809ms</span>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
 </div>
 <div class='test-desc'></div>
 <div class='test-attributes'>
@@ -307,11 +303,38 @@ ExtentReports 2.0
 </tr>
 </thead>
 <tbody>
+</tbody>
+</table>
+<ul class='collapsible node-list' data-collapsible='accordion'>
+</ul>
+</div>
+</div>
+</li>
+<li class='collection-item test displayed active unknown' extentid='ed49c612-fc0a-400d-be30-38197b97654c'>
+<div class='test-head'>
+<span class='test-name'>testAuto </span>
+<span class='test-status label right outline capitalize unknown'>unknown</span>
+<span class='category-assigned hide '></span>
+</div>
+<div class='test-body'>
+<div class='test-info'>
+<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-2 text-white'>2016-02-04 17:34:04</span>
+<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
+</div>
+<div class='test-desc'></div>
+<div class='test-attributes'>
+</div>
+<div class='test-steps'>
+<table class='bordered table-results'>
+<thead>
 <tr>
-<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-<td class='timestamp'>14:38:10</td>
-<td class='step-details'>Test passed</td>
+<th>Status</th>
+<th>Timestamp</th>
+<th>Details</th>
 </tr>
+</thead>
+<tbody>
 </tbody>
 </table>
 <ul class='collapsible node-list' data-collapsible='accordion'>
